Fixed: Line numbers and code overlapping in output

--- a/Stebs5/Content/stebs.css
+++ b/Stebs5/Content/stebs.css
@@ -277,15 +277,6 @@ a:hover, a:active {
     height: calc(100% - 38px - 38px - 100px);
 }
 
-#codingView #codingTextArea {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    border: 1px solid black;
-    margin: 0 0 0 0;
-    padding: 5px 5px;
-}
-
 /* 6. Run and Debug-Controll Panel */
 
 .runAndDebug {
